docs: add gzip/plain-zstd tiers and a req/s + bytes perf test to the RFC 9842 demo
Server.java now negotiates a four-rung Content-Encoding ladder via
Accept-Encoding, best first: dcz (zstd + dictionary, RFC 9842) when
offered and valid, plain zstd (RFC 8878) if accepted, gzip (the
universal HTTP baseline, java.util.zip) if accepted, else identity.

NaiveClient now sends Accept-Encoding: gzip (what real HTTP clients do
by default) instead of nothing, so its "no RFC 9842 awareness" baseline
is realistic rather than a strawman. Rfc9842Client advertises the full
"gzip, zstd, dcz" ladder and decodes whichever tier the server picked.

New PerfTest.java: sequential requests/second and total-bytes-transferred
comparison across all four tiers against the live server, reusing one
ZstdDecompressContext across the loop per the library's own hot-path
guidance. Verified end to end (not just read) — dcz wins on both KPIs:

  encoding        req/s  avg bytes/req     avg us/req  total bytes
  identity       2949.3         2828.0          339.1      1413999
  gzip           3899.2          361.4          256.5       180683
  zstd           4630.3          377.0          216.0       188483
  dcz            4885.2          328.5          204.7       164265

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>